--- a/assets/theme/console.css
+++ b/assets/theme/console.css
@@ -9,6 +9,7 @@
 }
 
 .console-background {
+    background-color: #000000;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -25,7 +26,7 @@
 }
 
 .console {
-    text-shadow: 0 0 2px #C8C8C8;
+    text-shadow: 0 0 3px #C8C8C8;
     font: 1.3rem Inconsolata, monospace;
     color: #dddddd;
     word-wrap: break-word;
